stringSearch
